<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Koppi</string>
    <string name="menu_settings">Settings</string>
    <string name="update">Update</string>
    <string name="not_checked">Not checked</string>
    <string name="last_checked">Last checked</string>
    <string name="players_ready">%d players ready.</string>
    <string name="crash_toast_text">Crash</string>
    <string name="enabled">Enabled</string>
    <string name="enable">Enable</string>
    <string name="muted">Muted</string>
    <string name="mute">Mute</string>
    <string name="no_network_connection">No network connection available</string>
    <string name="error_downloading_data">Error while downloading data:</string>
    <string name="running">Koppi is still running in the background&#8230;</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="version">Koppi v0.3</string>
    <string name="automatic_updates">Automatic updates</string>
    <string name="obey_ringer_mode">Obey phone\'s ringer mode</string>
    <string name="background">Background updates</string>
    <string name="background_summary">Keep Koppi in the background</string>
    <string name="interval">Interval</string>

</resources>