<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    tools:context=".MainActivity" >

    <ToggleButton
        android:id="@+id/enabledToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textOn="@string/enabled"
        android:textOff="@string/enable"
        />

    <ToggleButton
        android:id="@+id/mutedToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/enabledToggleButton"
        android:textOn="@string/muted"
        android:textOff="@string/mute"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/muteButton"
        android:layout_toLeftOf="@+id/muteButton"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="44dp"
        android:layout_marginRight="21dp"
        android:text="@string/update"
        />

    <TextView
        android:id="@+id/lastCheckedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="44dp"
        android:layout_marginLeft="21dp"
        android:text="@string/not_checked"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/playerCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:text="@string/not_checked"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

</RelativeLayout>
